--- a/MainNet/5. Templates/4. Todo Template.md
+++ b/MainNet/5. Templates/4. Todo Template.md
@@ -2,11 +2,9 @@
 tags:
   - "#todo"
 Links: "[[Projects]]"
-Deadline: 0001-01-01
-Start Date: 2025-01-01
 User:
 ---
-# Todo Template
+# {{Title}}
 ## BackLinks
 
 ```dataview
